# NovaDrive

./: docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  .env  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: auth.py  health.py  readiness.py
backend/app/core/: config.py  exceptions.py  logging.py  responses.py  security.py
backend/app/db/: __init__.py  base_class.py  session.py
backend/app/dependencies/: auth.py
backend/app/middleware/: logging_middleware.py  timing_middleware.py
backend/app/models/: user.py
backend/app/repositories/: user_repository.py
backend/app/routes/: pages.py
backend/app/schemas/: auth.py  response.py  token.py  user.py
backend/app/services/: auth_service.py
backend/app/static/css/: main.css
backend/app/static/js/: app.js
backend/app/templates/: base.html
backend/app/templates/auth/: login.html  register.html
backend/app/templates/dashboard/: index.html
components/: .gitignore
frontend/src/components/: .gitignore
frontend/src/lib/: react-query.ts
