[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "novadrive"
version = "0.1.0"
description = "Distributed Storage Platform"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "asyncpg",
    "alembic",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "PyJWT",
    "passlib[bcrypt]",
    "email-validator"
]

[tool.setuptools.packages.find]
include = ["app*"]